--- a/database/mysql.yml
+++ b/database/mysql.yml
@@ -1,28 +1,28 @@
-- name: Testing a connection
+- name: Connecting of mysql
   hosts: myhosts
   tasks:
-    # - name: Ping my hosts
-    #   ansible.builtin.ping:
+    - name: Ping my hosts
+      ansible.builtin.ping:
 
-    # - name: Update apt-get
-    #   ansible.builtin.command: sudo apt-get update
+    - name: Update apt-get
+      ansible.builtin.command: sudo apt-get update
 
-    # - name: Install mysql using apt-get
-    #   ansible.builtin.command: sudo apt-get install mysql-client-core-8.0
+    - name: Install mysql using apt-get
+      ansible.builtin.command: sudo apt-get install mysql-client-core-8.0
 
-    # - name: Install mysql server using apt-get
-    #   ansible.builtin.command: sudo apt install mysql-server -y
+    - name: Install mysql server using apt-get
+      ansible.builtin.command: sudo apt install mysql-server -y
 
-    # - name: Install pymysql server using apt-get
-    #   ansible.builtin.command: sudo apt-get install python3-pymysql -y
+    - name: Install pymysql server using apt-get
+      ansible.builtin.command: sudo apt-get install python3-pymysql -y
     
-    # - name: Create a new database with name 'database_01'
-    #   community.mysql.mysql_db:
-    #     name: database_01
-    #     login_host: localhost
-    #     login_user: root
-    #     login_password: password
-    #     state: present
+    - name: Create a new database with name 'database_01'
+      community.mysql.mysql_db:
+        name: database_01
+        login_host: localhost
+        login_user: root
+        login_password: password
+        state: present
 
     - name: Run Create table query in a database
       community.mysql.mysql_query:
